rnsc/test_data/rns_integration/error/parser/flags_sub_directive/outside_inner_classes_attr.rns
; Tests that .flags outside .inner_classes_attr body is detected.
; Expected error: E-007 (unexpected token in class body)

.class public MyClass
.super java/lang/Object

.flags public

.class_end
